--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -2,7 +2,8 @@
 	<div class="col-xs-6 col-md-offset-4">
 		<div class="well">
 			<p>
-			  <%= @pin.description %>
+				<%= @pin.description %>
+			  <%= @pin.created_at %>
 			</p>
 			<%= link_to 'Edit', edit_pin_path(@pin) %> |
 			<%= link_to 'Back', pins_path %>
